working on discussion and conclusion part. Adding annual rate of earthquake figure.

--- a/PSHA.bib
+++ b/PSHA.bib
@@ -2,6 +2,20 @@
 % Encoding: MacRoman
 
 
+@Article{Abdi2013,
+  Title                    = {Ground-motion scenarios consistent with PSH deaggregation for Tehran, capital city of Iran},
+  Author                   = {Abdi, F and Mirzaei, N and Shabani, E},
+  Journal                  = {Natural Hazards and Earth System Science},
+  Year                     = {2013},
+  Number                   = {3},
+  Pages                    = {679--688},
+  Volume                   = {13},
+
+  Owner                    = {naeem},
+  Publisher                = {Copernicus GmbH},
+  Timestamp                = {2016.01.23}
+}
+
 @Article{Abdollahzadeh2014,
   Title                    = {Modified probabilistic approach for seismic hazard zoning of {G}olestan region, {I}ran},
   Author                   = {Abdollahzadeh, Gholamreza and Khanmohammadi, Leila and Zahedi Tajrishi, Fatemeh},
@@ -14,6 +28,20 @@
   Owner                    = {naeem},
   Publisher                = {Taylor \& Francis},
   Timestamp                = {2015.07.18}
+}
+
+@Article{Abdollahzadeh2014a,
+  Title                    = {Considering potential seismic sources in earthquake hazard assessment for Northern Iran},
+  Author                   = {Abdollahzadeh, Gholamreza and Sazjini, Mohammad and Shahaky, Mohsen and Tajrishi, Fatemeh Zahedi and Khanmohammadi, Leila},
+  Journal                  = {Journal of seismology},
+  Year                     = {2014},
+  Number                   = {3},
+  Pages                    = {357--369},
+  Volume                   = {18},
+
+  Owner                    = {naeem},
+  Publisher                = {Springer},
+  Timestamp                = {2016.01.23}
 }
 
 @Article{Ahmadi2013,
@@ -66,6 +94,20 @@
   Timestamp                = {2015.07.15}
 }
 
+@Article{Alavi1991,
+  Title                    = {Tectonic map of the middle east. Geological Survey of Iran},
+  Author                   = {Alavi, M},
+  Journal                  = {scale},
+  Year                     = {1991},
+  Number                   = {5,000,000},
+  Pages                    = {1},
+  Volume                   = {1},
+
+  __markedentry            = {[naeem:]},
+  Owner                    = {naeem},
+  Timestamp                = {2016.01.25}
+}
+
 @Book{Ambraseys2005,
   Title                    = {A history of {P}ersian earthquakes},
   Author                   = {Ambraseys, Nicholas Nicholas and Melville, Charles Peter},
@@ -74,6 +116,19 @@
 
   Owner                    = {naeem},
   Timestamp                = {2015.07.15}
+}
+
+@Article{Baker2008,
+  Title                    = {An introduction to probabilistic seismic hazard analysis (PSHA)},
+  Author                   = {Baker, Jack W},
+  Journal                  = {White paper, version},
+  Year                     = {2008},
+  Pages                    = {72},
+  Volume                   = {1},
+
+  __markedentry            = {[naeem:6]},
+  Owner                    = {naeem},
+  Timestamp                = {2016.01.25}
 }
 
 @Article{Barani2007,
@@ -102,6 +157,16 @@
   Owner                    = {naeem},
   Publisher                = {Seismological Society of America},
   Timestamp                = {2015.07.15}
+}
+
+@TechReport{Bender1982,
+  Title                    = {SEISRISK II; a computer program for seismic hazard estimation},
+  Author                   = {Bender, Bernice and Perkins, David M},
+  Institution              = {US Geological Survey,},
+  Year                     = {1982},
+
+  Owner                    = {naeem},
+  Timestamp                = {2016.01.23}
 }
 
 @Article{Berberian1997,
@@ -190,6 +255,20 @@
 
   Owner                    = {naeem},
   Timestamp                = {2015.08.24}
+}
+
+@Article{Boostan2015,
+  Title                    = {Fuzzy—probabilistic seismic hazard assessment, case study: Tehran region, Iran},
+  Author                   = {Boostan, Elham and Tahernia, Nadia and Shafiee, Ali},
+  Journal                  = {Natural Hazards},
+  Year                     = {2015},
+  Number                   = {2},
+  Pages                    = {525--541},
+  Volume                   = {77},
+
+  Owner                    = {naeem},
+  Publisher                = {Springer},
+  Timestamp                = {2016.01.23}
 }
 
 @Article{Boyd2008,
@@ -401,6 +480,19 @@
   Timestamp                = {2015.07.18}
 }
 
+@Article{Golara2014,
+  Title                    = {Probabilistic seismic hazard analysis of interconnected infrastructure: a case of Iranian high-pressure gas supply system},
+  Author                   = {Golara, A},
+  Journal                  = {Natural hazards},
+  Year                     = {2014},
+  Number                   = {2},
+  Pages                    = {567--577},
+  Volume                   = {73},
+  Owner                    = {naeem},
+  Publisher                = {Springer},
+  Timestamp                = {2016.01.23}
+}
+
 @Article{Gutenberg1944,
   Title                    = {Frequency of earthquakes in California},
   Author                   = {Gutenberg, Beno and Richter, Charles F},
@@ -525,6 +617,17 @@
   Timestamp                = {2015.07.16}
 }
 
+@InProceedings{Kijko2000,
+  Title                    = {Statistical estimation of maximum regional earthquake magnitude Mmax},
+  Author                   = {Kijko, A},
+  Booktitle                = {Workshop of Seismicity Modeling in Seismic Hazard Mapping, Poljce, Slovenia, Geological Survey},
+  Year                     = {2000},
+  Pages                    = {1--10},
+
+  Owner                    = {naeem},
+  Timestamp                = {2016.01.23}
+}
+
 @Article{Kijko1989,
   Title                    = {Estimation of earthquake hazard parameters from incomplete data files. {P}art {I}. {U}tilization of extreme and complete catalogs with different threshold magnitudes},
   Author                   = {Kijko, A and Sellevoll, MA},
@@ -537,6 +640,20 @@
   Owner                    = {naeem},
   Publisher                = {Seismological Society of America},
   Timestamp                = {2015.07.15}
+}
+
+@Article{Kijko1992,
+  Title                    = {Estimation of earthquake hazard parameters from incomplete data files. Part II. Incorporation of magnitude heterogeneity},
+  Author                   = {Kijko, Andrzej and Sellevoll, Markvard A},
+  Journal                  = {Bulletin of the Seismological Society of America},
+  Year                     = {1992},
+  Number                   = {1},
+  Pages                    = {120--134},
+  Volume                   = {82},
+
+  Owner                    = {naeem},
+  Publisher                = {Seismological Society of America},
+  Timestamp                = {2016.01.23}
 }
 
 @Article{Klein2001,
@@ -705,7 +822,6 @@
   Author                   = {Richter, Charles Francis},
   Year                     = {1958},
 
-  __markedentry            = {[naeem:]},
   Owner                    = {naeem},
   Timestamp                = {2016.01.10}
 }
@@ -744,7 +860,6 @@
   Publisher                = {Cambridge University Press},
   Year                     = {2009},
 
-  __markedentry            = {[naeem:6]},
   Owner                    = {naeem},
   Timestamp                = {2016.01.15}
 }
