--- a/springer_main.tex
+++ b/springer_main.tex
@@ -23,6 +23,14 @@
 %\usepackage{latexsym}
 % etc.
 %
+
+% Table package
+
+\usepackage{multirow}
+
+%
+
+
 % please place your own definitions here and don't use \def but
 % \newcommand{}{}
 %
@@ -42,8 +50,8 @@
 
 \author{Naeem Khoshnevis         \and
              Shima Azizzadehroodpish \and
-             Chris H Cramer \and
-             Ricardo Taborda}
+             Ricardo Taborda \and
+             Chris H Cramer}
 
 %\authorrunning{Short form of author list} % if too long for running head
 
@@ -60,15 +68,15 @@
                Department of Civil Engineering \\
              \email{szzzdhrd@memphis.edu}        
 \and
-Chris H Cramer \at
-                            University of Memphis \\
-               Center for Earthquake Research and Information \\
-               \email{ccramer@memphis.edu}    
-\and
 Ricardo Taborda \at
                             University of Memphis \\
                Center for Earthquake Research and Information \\
-               \email{rtbrdros@memphis.edu}   
+               \email{ rtbrdros@memphis.edu }  
+\and
+Chris H Cramer \at
+                            University of Memphis \\
+               Center for Earthquake Research and Information \\
+               \email{ccramer@memphis.edu}   
 }
 
 \date{Received: date / Accepted: date}
