--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,3 +1,2 @@
 \section{Conclusion}
-
-A new probabilistic seismic hazard assessment for northern Iran using updated seismic catalogs. Seismic hazard is evaluated over three regions (Azerbaijan, Tehran, Kopeh-Dagh) using the smoothed background seismicity. According to our study, in the Alborz  and Azerbaijan regions substantial seismic hazard is observed.  We studied probabilistic seismic hazard based on smoothed seismicity using historical and instrumental data. The results of this paper can be addressed in three main conclusions. First, probabilistic seismic hazard analysis using smoothed seismicity is sufficient for 10\% probability of exceedance. Second, since this study is based solely on historical and instrumental data, places with very close PGA values to those studies with considering faults as a primary source of seismicity, show normal and predictable seismic activity. Third, places with lower hazard values compared to other studies show anomalous seismic activity and suggest the idea of expecting more and bigger events in the future. As mentioned before, probabilistic seismic hazard analysis based on smoothed seismicity is very sensitive to input parameters (e.g., correlation distance, $b-value$, catalog completeness, and threshold magnitude for structural damage). Studying the sensitivity rate of these parameters could develop a more trustworthy result. Maps presented in this paper are for illustrative purposes only, and are not intended to be used in any application. 
+The result of a new probabilistic seismic hazard assessment for northern Iran using updated seismic catalogs is provided. Seismic hazard is evaluated over entire three regions (Azerbaijan, Alboz, Kopeh-Dagh) as well as part of Central and Zagros tectonic seismic regions using the smoothed background seismicity. In order to determine the seismic hazard in North Iran, different studies have been done. These studies are based on defining faults as a seismic source model. Using faults as a seismic source model could result in accurate values in case the faults are precisely determined. There are considerable uncertainties on fault characteristic, specially on fault length. Instead of using faults as a seismic source, we consider each earthquake event as a point source in the model. We reduce the uncertainty in earthquake location by smoothing the number of earthquake in adjacent cells. We defined models based on considering the whole North Iran as a uniform seismic tectonic regions and 5 different seismic tectonic regions. The differences in catalog completeness, b value, and maximum magnitude of earthquake in these two models resulted in different results. This indicate the idea that dividing regions into subregions is necessary in order to be able to get accurate results. The result are also sensitive to the minimum magnitude. The structures built according to engineering code are supposed to withstand the earthquake with magnitude 5 at the reasonable distance. However, closer $M_w > 4.5$ for those structures and also older masonry structures could cause structural damage. A combination of two models $(M_w > 4.5, M_w>5)$ in each city based on number of engineering and old masonry structures will provide more accurate results. The results are provided for mean peak horizontal acceleration in bedrock. The ground acceleration in soil deposits and inside basin will be bigger than the provided values. This model reduce the epistemic uncertainty regarding the recognizing faults and earthquake location. Combination of this model with a study based on using faults will increase the values for existing non-active seismic fault regions.  
