--- a/analysis_parameters.tex
+++ b/analysis_parameters.tex
@@ -6,7 +6,6 @@
 The choice of a ground motion attenuation model is of great importance since attenuation has proven to be a highly influential factor of seismic hazard. \citet{Zafarani2014} used 163 free-field acceleration time histories recorded at epicentral distance of up to 200 km from 32 earthquakes to investigate the predictive capabilities of the local, regional, and next generation attenuation (NGA) ground-motion prediction equations and determined their applicability for northern Iran. After evaluating different Ground Motion Prediction Equations, \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008} represented suitable performance for  PGA  with LLH (Log-Likelihood method) score of 1.54, 1.55, and 1.59. Mean of the mentioned attenuation relationships (not shown here), are very close together, especially at higher magnitude. Using \citet{Scherbaum2009} approach and \citet{Zafarani2014} coefficients we calculated the logic tree weights as 0.3376, 0.3354, and 0.3270, respectively. Getting close mean values and logic tree weights, in order to consider the epistemic uncertainty, instead of using several GMPEs we use the top rank GMPE (i.e.  \citet{Kalkan2004} ). We also presented the results for  $\pm$ standard deviation. \\
 
 \noindent
-
 The attenuation relationship is:
 
 \begin{equation}
@@ -59,11 +58,11 @@ For the smoothed seismicity method, completeness of each magnitude in the catalo
 \begin{figure*} [!ht]
 \centering
 \includegraphics[scale=0.6]{figures/pdf/completness_scatter.pdf} 
-\caption{Magnitude-time distribution of earthquakes in the study regions. a) Alborz, b) Azerbaijan, c)Central, d)Kopeh Dagh, e)Zagros}
+\caption{Magnitude-time distribution of earthquakes in the study regions. a) Alborz, b) Azerbaijan, c)Central, d)Kopeh-Dagh, e)Zagros}
 \label{fig:completness_scatter}
 \end{figure*}
 
- According to   \citet{Frankel1995},  we made plots of the cumulative number of events against time for different regions. We pick the Mw 0.5 increments in magnitude to be able to compare the results with \citet{Zare2014}. In order to be able to compare the results with \citet{Zare2014} we merge the data of Azerbaijan and Alborz seismic regions.  Fig.~\ref{fig:completness_compare_zare_2014_Az_Al} shows the completeness of catalog for earthquakes with different magnitude range in Azerbaijan-Alborz region. According to this figure, midrange magnitudes ($ 4 < Mw < 6 $) fairly obey the network developments in 1900 and 1961. The completeness thresholds for each magnitude range which are reported by \citet{Zare2014} are shown by dashed green line. In this study we follow the \citet{Frankel1995} approach to determine the completeness of each region. Even though the approach used by \citet{Frankel1995} will lead to the conservative results, we make sure that we don't use a period of time without knowing the complete number of events. Determining the completeness of the catalog is very sensitive to the data. Converting earthquake magnitudes from different scales to moment magnitude obviously has some error. Having broader range of magnitude will help to minimize these sort of error. In this study we consider the magnitude intervals for completeness study as $Mw = 1$. 
+ According to   \citet{Frankel1995},  we made plots of the cumulative number of events against time for different regions' catalog. We pick the Mw 0.5 increments in magnitude to be able to compare the results with \citet{Zare2014}. In order to be able to compare the results with \citet{Zare2014} we merge the data of Azerbaijan and Alborz seismic regions.  Fig.~\ref{fig:completness_compare_zare_2014_Az_Al} shows the completeness of catalog for earthquakes with different magnitude range in Azerbaijan-Alborz region. According to this figure, midrange magnitudes ($ 4 < Mw < 6 $) fairly obey the network developments in 1900 and 1961. The completeness thresholds for each magnitude range which are reported by \citet{Zare2014} are shown by dashed green line. In this study we follow the \citet{Frankel1995} approach to determine the completeness of each region. Even though the approach used by \citet{Frankel1995} will lead to the conservative results, we make sure that we don't use a period of time without knowing the complete number of events. Determining the completeness of the catalog is very sensitive to the data. Converting earthquake magnitudes from different scales to moment magnitude obviously has some error. Having broader range of magnitude will help to minimize these sort of error. In this study we consider the magnitude intervals for completeness study as $Mw = 1$. 
 
 \begin{figure*} [!ht]
 \centering
@@ -73,7 +72,7 @@ For the smoothed seismicity method, completeness of each magnitude in the catalo
 \end{figure*}
 
 \noindent
-Fig.~\ref{fig:comp_test_all_mag} illustrates the completeness of data for each magnitude threshold in five different regions. A uniform rise of cumulative number of earthquake in each magnitude range, defines the threshold for catalog completeness. We define a completeness of each magnitude range at a time which the cumulative number of earthquake increase linearly with time. We assume the catalog for earthquakes with magnitude greater than  7 ($M_w > 7$) is complete from the first historical earthquake report.  Determining the completeness of the catalog for $ 6 < Mw \leq 7 $ needs precise observation of the catalog. In Azerbaijan tectonic seismic region after 1045  $Mw = 6.2$ earthquake the catalog seems complete up to 1318. However, between 1318 and 1581 (263 years) only one earthquake with magnitude $Mw > 6$ is reported (1440,  $Mw = 6.2$ ). Considering the activity of the Azerbaijan region, in this study we assume that the catalog is complete for earthquake with magnitude $ 6 < Mw \leq 7 $ after 1581. Similar situation happened at the period of 1715 - 1833. It worth to mention that , the time period is shorter than before (118 years), meanwhile in this period of time two earthquakes with magnitude $Mw>7$ occurred in the Azerbaijan region (1721 $Mw=7.7$, 1780 $Mw=7.6$). The catalog may or may not be completed after 1045, however in this study we consider 1581 as a completeness threshold for magnitude  $ 6 < Mw \leq 7 $. Considering completeness of the catalog for Azerbaijan region from 1581 will result in conservative PGA for the region in compare with the model with threshold of 1045. We picked the completeness threshold for other regions and other magnitude ranges according as a year that the cumulative number of earthquakes increment uniformly. Table ~\ref{tab:completeness} shows the summary of values used in this study.
+Fig.~\ref{fig:comp_test_all_mag} illustrates the completeness of data for each magnitude threshold in five different regions. A uniform rise of cumulative number of earthquake in each magnitude range, defines the threshold for catalog completeness. We define the completeness of each magnitude range at a time which the cumulative number of earthquake increase linearly with time. We assume the catalog for earthquakes with magnitude greater than  7 ($M_w > 7$) is complete from the first historical earthquake report.  Determining the completeness of the catalog for $ 6 < Mw \leq 7 $ needs precise observation of the catalog. In Azerbaijan tectonic seismic region after 1045  $Mw = 6.2$ earthquake the catalog seems complete up to 1318. However, between 1318 and 1581 (263 years) only one earthquake with magnitude $Mw > 6$ is reported (1440,  $Mw = 6.2$ ). Considering the activity of the Azerbaijan region, in this study we assume that the catalog is complete for earthquake with magnitude $ 6 < Mw \leq 7 $ after 1581. Similar situation happened at the period of 1715 - 1833. It worth to mention that in this case, the time period is shorter than before (118 years), meanwhile in this period of time two earthquakes with magnitude $Mw>7$ occurred in the Azerbaijan region (1721 $Mw=7.7$, 1780 $Mw=7.6$). The catalog may or may not be completed after 1045, however in this study we consider 1581 as a completeness threshold for magnitude  $ 6 < Mw \leq 7 $. Considering completeness of the catalog for Azerbaijan region from 1581 will result in conservative PGA for the region in compare with the model with threshold of 1045. We picked the completeness threshold for other regions and other magnitude ranges according as a year that the cumulative number of earthquakes increment uniformly. Table ~\ref{tab:completeness} shows the summary of values used in this study.
 
 
 
