--- a/springer_main.tex
+++ b/springer_main.tex
@@ -1,104 +1,92 @@
+
 \RequirePackage{fix-cm}
 
-%
-%\documentclass{svjour3}                     % onecolumn (standard format)
-%\documentclass[smallcondensed]{svjour3}     % onecolumn (ditto)
-%\documentclass[natbib,smallextended]{svjour3}       % onecolumn (second format)
+% Document Settings
+\documentclass[natbib,twocolumn]{svjour3}
 
-\documentclass[natbib,twocolumn]{svjour3}          % twocolumn
-%
-\smartqed  % flush right qed marks, e.g. at end of proof
-%
+
+% Flushing
+\smartqed
+
+
+% Packages
 \usepackage{graphicx}
-\usepackage[a4paper]{geometry}
 \usepackage{xcolor}
 \usepackage{amsmath}
-%\usepackage[margin=1in]{geometry}
-
-%
-% \usepackage{mathptmx}      % use Times fonts if available on your TeX system
- \usepackage{aps-bibstyle}  % use this style if you upload to .tex file only a part of Bibtex created bbl.
-%
-% insert here the call for the packages your document requires
-%\usepackage{latexsym}
-% etc.
-%
-
-% Table package
-
 \usepackage{multirow}
+\usepackage{marvosym}
 
-%
+\usepackage{aps-bibstyle}  % use this style if you upload to .tex file only a part of Bibtex created bbl.
 
 
-% please place your own definitions here and don't use \def but
-% \newcommand{}{}
-%
-% Insert the name of "your journal" with
- \journalname{Journal of Seismology}
-%
-% Definitions for the journal names
-\newcommand{\aap}{{Astron. Astrophys.}}
-\newcommand{\apj}{{Astrophys. J.}}
-\newcommand{\grl}{{Geophys. Res. Lett.}}
-\newcommand{\solphys}{{Solar Phys.}}
-%
+% Journal Name
+\journalname{Journal of Seismology}
+
+
+% START: The Document
 \begin{document}
 
 
-\title{ Seismic Hazard Estimation of Northern Iran Using Smoothed Historical Seismicity}
+% Long Title
+\title{Seismic Hazard Estimation of Northern Iran Using Smoothed Seismicity}
 
-\author{Naeem Khoshnevis         \and
-             Shima Azizzadehroodpish \and
-             Ricardo Taborda \and
-             Chris H Cramer}
 
-%\authorrunning{Short form of author list} % if too long for running head
+% Running Title
+\titlerunning{Seismic Hazard of Northern Iran}
 
-\institute{Naeem Khoshnevis \at
-               University of Memphis \\
-               Center for Earthquake Research and Information \\
-               3890 Central Ave. Memphis TN 38152 \\
-              Tel.: +1(901) 678-2007\\
-               \email{nkhshnvs@memphis.edu}        
-           \and
-           Shima Azizzadehroodpish \at
-                            University of Memphis \\
-               Center for Earthquake Research and Information \\
-               Department of Civil Engineering \\
-             \email{szzzdhrd@memphis.edu}        
-\and
-Ricardo Taborda \at
-                            University of Memphis \\
-               Center for Earthquake Research and Information \\
-               \email{ rtbrdros@memphis.edu }  
-\and
-Chris H Cramer \at
-                            University of Memphis \\
-               Center for Earthquake Research and Information \\
-               \email{ccramer@memphis.edu}   
+
+% Authors
+\author{%
+	N.~Khoshnevis \and
+	S.~Azizzadeh-Roodpish \and
+	R.~Taborda \and
+	C.~H.~Cramer
 }
 
-\date{Received: date / Accepted: date}
+
+% Affiliations
+\institute{%
+	N.~Khoshnevis \and C.~H.~Cramer \at
+	Center for Earthquake Research and Information,
+	University of Memphis, 3890 Central Ave., Memphis TN 38152, USA\\
+	\and
+	S.~Azizzadeh-Roodpish \and R.~Taborda (\Letter)\at
+	Department of Civil Engineering, and
+	Center for Earthquake Research and Information,
+	University of Memphis, 3890 Central Ave., Memphis TN 38152, USA\\
+	\email{ricardo.taborda@memphis.edu}  
+}
 
 
+% Date
+% \date{Received: date / Accepted: date}
+
+
+% Title Production
 \maketitle
 
-\begin{abstract}
-\input{abstract}
-\keywords{Seismic hazard \and Spatially smoothed seismicity \and Northern Iran}
 
+% Abstract
+\begin{abstract}
+	\input{abstract}
+	\keywords{%
+		Seismic hazard \and 
+		Spatially smoothed seismicity 
+		\and Northern Iran
+	}
 \end{abstract}
 
+
+% Article Content
 \input{content}
 
-\newpage
-\bibliographystyle{aps-nameyear}      % American Physical Society (APS) style, author-year citations
-\bibliography{PSHA}                           % name your BibTeX data base
-\nocite{*}
+
+% Bibliography
+\bibliographystyle{spbasic}
+\bibliography{PSHA}
+% \nocite{*}
 
 
-
+% END: The Document
 \end{document}
-
 
