--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,15 @@
+% 
+This article presents a seismic hazard assessment for northern Iran, using a smoothed seismicity approach in combination with an updated seismic catalog and a recently introduced ground motion prediction equation. In the assessment, we evaluate the hazard considering the contribution of the three major seismic zones affecting the northern part of the country, namely Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh. For completeness, we also consider the partial contribution of the two remaining seismic zones of Zagros and the central and eastern 
+
+
+% Ricardo is working on this...
+
+,  and 
+
+recently introduced 
+
+ We conduct an assessment of seismic hazard for northern Iran using 
+
+
+
 In this study we conduct a new probabilistic seismic hazard assessment for northern Iran, using recently confirmed ground motion prediction equations and updated seismic catalogs. We evaluate seismic hazard over whole three tectonic seismic zones (Alborz Mountain Range, Azerbaijan and Kopeh-Dagh) and part of two tectonic seismic zones (Zagros and Central-East Iran) using smoothed seismicity. In this model, events are not assigned to specific faults and are assumed to be potential seismogenic sources, spatially gridded to cells. We decluster historical and instrumental seismicity to compute the rate of earthquakes in each grid, and smooth these rates to account for uncertainty in the spatial distribution of future earthquakes. We assume each grid cell has spacing of $0.1^{\circ}$ in latitude and $0.1^{\circ}$ in longitude and count the number of earthquakes in each of them. We use Gaussian filter to smooth the fraction of earthquakes in incremental intervals of magnitude. For this article, in order to consider the seismicity rate, we consider all historical and instrumental earthquakes with magnitude above 3. To calculate the seismic hazard we defined two models based on structural damage threshold magnitude, including Mw 4.5 and Mw 5. Seismicity parameters are calculated for each seismic region, and smoothed seismicity is calculated separately for each. We also consider the combination of regions as a uniform region.  We add the probability of exceedance of all regions and present the smoothed seismicity hazard in northern Iran. The horizontal peak ground acceleration is selected as the ground motion parameter. The results are assessed in terms of the expected peak ground acceleration (PGA) with a 10\% and 2\% probability of exceedance in 50 years for rock site conditions. The seismic hazard map for northern Iran is presented. 
